# Misskey-Bot-CeilingFox

./: .gitignore  README.md  blobfox  ceilingfox.py  cfbot.py  example-bot.cfg  pyproject.toml  requirements.txt  utils.py
cogs/: command.py
