[tool.poetry]
name = "misskey-bot-ceilingfox"
version = "0.1.0"
description = ""
authors = ["Fotoente <robert@fotoente.net>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
configparser = "^5.2.0"
mipa = {git = "https://github.com/yupix/mipa.git"}
mipac = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
